<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eee"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLayout"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/record_audio"
            android:id="@+id/recordButton"
            android:onClick="recordAudio"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/stop_record"
            android:id="@+id/stopButton"
            android:onClick="stopRecord"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/play_audio"
            android:id="@+id/playButton"
            android:onClick="playAudio"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button1"
            android:onClick="callExplorer"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/hint_main"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/hint_second"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/hint_third"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/hint_fourth"
            />

    </LinearLayout>

    <!--<ListView-->
        <!--style="@style/ListViewTheme"-->
        <!--android:id="@android:id/list"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:divider="#000"-->
        <!--android:dividerHeight="2dp"-->
        <!-->-->

    <!--</ListView>-->


</LinearLayout>