<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:id="@+id/layout_done"
        android:visibility="visible">

        <ListView
            android:id="@android:id/list"
            style="@style/ListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/colorText"
            android:dividerHeight="2dp"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="@string/file_explorer_title"/>

        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:visibility="gone"
            android:id="@+id/button_done"
            android:text="@string/done_text"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:onClick="done"/>

        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:visibility="gone"
            android:id="@+id/button_clear"
            android:text="@string/clear_text"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="false"
            android:layout_marginBottom="10dp"
            android:onClick="clear"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true" />
    </RelativeLayout>

    <!--android:background="@drawable/blackframe"-->

    <!--tools:listitem="@android:layout/select_dialog_multichoice"-->

</LinearLayout>